tests/baselines/reference/parserImportDeclaration1.errors.txt
==== tests/cases/compiler/parserImportDeclaration1.ts (1 errors) ====
    import TypeScript = TypeScriptServices.TypeScript;
                        ~~~~~~~~~~~~~~~~~~
!!! parserImportDeclaration1.ts(1,21): error TS2179: Unable to resolve module reference 'TypeScriptServices'.